# Defcoin-Core-Nu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ci/: README.md  test_run_all.sh
.github/ci/test/: 00_setup_env.sh  00_setup_env_native_msan.sh  06_script_b.sh
build-aux/m4/: bitcoin_qt.m4
contrib/: apple-sdk-le32-shim.h  build-boost-arm64.sh  defcoin-macos-package-dmg.sh  defcoin-smoke-test.sh
contrib/legacy-osx107/: package_legacy_dmg.sh
contrib/macdeploy/: custom_dsstore.py  macdeployqtplus
depends/: funcs.mk
depends/patches/qt5.5.1/: openssl3-lion-compat.patch
doc/: README.md  build-osx.md  changelog.md  defcoin-0.21.5.5-port-notes.md  defcoin-build-deviation-matrix.md  defcoin-core-help-manual.md  defcoin-core-nu-github-notes.md  defcoin-core-nu-port-delta.md  defcoin-core-nu-technical-guide.md  defcoin-core-nu-v2026.1.md  defcoin-core-vs-litecoin-core.md  defcoin-litecoin-conversion-notes.md  defcoin-modern-build-guide.md  defcoin-porting-notes.md  defcoin-third-party-notices-standard.txt  developer-notes.md  github-publication-checklist.md  legacy-osx107-build-notes.md  litecoin-upstream-comparison-standard.md
doc/litecoin-release-notes/: release-notes-0.21.5.5.md
doc/release-notes/: release-notes-0.21.5.4-defcoin.20260429.md  release-notes-2026.1.md  release-notes-26.3.0.md  release-notes-26.3.1.md
share/: setup.nsi.in
share/qt/: Info.plist.in
source/contrib/: defcoin-macos-package-dmg.sh  defcoin-smoke-test.sh
source/contrib/macdeploy/: detached-sig-create.sh
source/depends/builders/: darwin.mk
source/depends/cmake/: mingw-w64-x86_64.cmake
source/depends/patches/boost/: numeric_conversion_enum_constants.patch
source/depends/patches/qt/: fix_darwin_libpng_target_os_mac.patch
source/depends/patches/zlib/: darwin-target-os-mac.patch
source/doc/: README.md  defcoin-core-nu-technical-guide.md  dnsseed-policy.md  license-and-attribution-notices.md
source/doc/man/: litecoin-qt.1
source/doc/release-notes/: release-notes-26.3.1.md
source/share/: setup.nsi.in
source/src/: Makefile.am  addrdb.cpp  addrman.h  bitcoin-tx.cpp  bitcoin-wallet.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.h  fs.cpp  net_processing.h  netbase.cpp  protocol.cpp
source/src/compat/: assumptions.h
source/src/crypto/: scrypt.cpp
source/src/policy/: feerate.h
source/src/qt/: bantablemodel.cpp  bantablemodel.h  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  defconmeetuppeers.h  guiutil.cpp  intro.cpp  macnotificationhandler.mm  networkstyle.cpp  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentserver.cpp  peertablemodel.h  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  trafficgraphwidget.h  transactiondescdialog.cpp  transactiontablemodel.cpp  transactionview.cpp  utilitydialog.h
source/src/qt/forms/: intro.ui  modaloverlay.ui  openuridialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
source/src/qt/locale/: bitcoin_be.ts  bitcoin_bn.ts  bitcoin_ca.ts  bitcoin_cs.ts  bitcoin_el.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_CO.ts  bitcoin_es_DO.ts  bitcoin_et.ts  bitcoin_eu.ts  bitcoin_fil.ts  bitcoin_fr.ts  bitcoin_gl_ES.ts  bitcoin_hu.ts  bitcoin_id.ts  bitcoin_is.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ko.ts  bitcoin_ku_IQ.ts  bitcoin_mr_IN.ts  bitcoin_my.ts  bitcoin_nb.ts  bitcoin_ne.ts  bitcoin_nl.ts  bitcoin_ro.ts  bitcoin_ru.ts  bitcoin_sk.ts  (+10 more)
source/src/qt/nu/app/: CMakeLists.txt  DefcoinCoreNu.rc  MacHelp.mm  NuRpcService.cpp  NuRpcService.h  main.cpp  set_macos_launch_plist.sh  stage_macos_distribution.sh  write_nu_build_metadata.cmake
source/src/rpc/: misc.cpp  net.cpp  rawtransaction.cpp  util.cpp
source/src/util/: message.cpp  system.cpp
source/src/wallet/: bdb.cpp  rpcdump.cpp  walletutil.cpp
src/: Makefile.qt.include  addrman.cpp  addrman.h  bitcoin-cli.cpp  bitcoind.cpp  chainparams.cpp  chainparams.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  init.cpp  net.cpp  net.h  net_processing.cpp  net_processing.h
src/crypto/: scrypt.cpp  scrypt.h
src/mweb/: mweb_node.cpp
src/qt/: README.md  askpassphrasedialog.cpp  bantablemodel.cpp  bitcoin.cpp  bitcoin.qrc  bitcoinstrings.cpp  bitcoinunits.cpp  defcoindummypeers.h  guiconstants.h  guiutil.h  macnotificationhandler.mm  macos_appnap.mm  modaloverlay.cpp  optionsdialog.cpp  overviewpage.cpp  peertablemodel.cpp  platformstyle.cpp  platformstyle.h  receivecoinsdialog.cpp  receiverequestdialog.cpp  receiverequestdialog.h  rpcconsole.cpp  splashscreen.cpp  splashscreen.h  trafficgraphwidget.cpp  transactiondesc.cpp  transactionview.h  utilitydialog.cpp
src/qt/forms/: coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  receiverequestdialog.ui
src/qt/locale/: bitcoin_af.ts  bitcoin_am.ts  bitcoin_ar.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_en.ts  bitcoin_es_MX.ts  bitcoin_es_VE.ts  bitcoin_fa.ts  bitcoin_fi.ts  bitcoin_he.ts  bitcoin_hi.ts  bitcoin_hr.ts  bitcoin_ka.ts  bitcoin_kk.ts  bitcoin_km.ts  bitcoin_ky.ts  bitcoin_la.ts  bitcoin_lt.ts  bitcoin_lv.ts  bitcoin_mk.ts  bitcoin_ml.ts  bitcoin_mn.ts  bitcoin_pl.ts  bitcoin_pt.ts  bitcoin_pt_BR.ts  bitcoin_si.ts  bitcoin_sl.ts  bitcoin_sn.ts  bitcoin_sq.ts  bitcoin_sv.ts  bitcoin_th.ts  bitcoin_ur.ts  bitcoin_zh-Hans.ts  bitcoin_zh.ts  bitcoin_zh_HK.ts
src/qt/nu/: README.md
src/qt/nu/app/: CMakeLists.txt  MacHelp.h  NuRpcService.cpp  main.cpp  remove_macos_help_plist.sh  set_macos_help_plist.sh
src/rpc/: blockchain.cpp  mining.cpp  net.cpp  rawtransaction_util.cpp
src/secp256k1-zkp/: Makefile.am
src/test/: addrman_tests.cpp
src/wallet/: rpcwallet.cpp
test/functional/: mweb_p2p_mutated_block_submitblock.py
tools/nu/: README.md
(+80 files in other folders)
